--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,23 @@
-dist
-dist-*
-cabal-dev
-*.o
-*.hi
-*.hie
-*.chi
-*.chs.h
-*.dyn_o
-*.dyn_hi
-.hpc
-.hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-*.prof
-*.aux
-*.hp
-*.eventlog
-.stack-work/
-cabal.project.local
-cabal.project.local~
-.HTF/
-.ghc.environment.*
+.gitignore
+
+# Eclipse
+
+.classpath
+.project
+.settings/
+ 
+# Intellij
+
+.idea/
+*.iml
+*.iws
+ 
+# Mac
+
+.DS_Store
+ 
+# Maven
+
+log/
+target/
+/target/
